--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -80,6 +80,7 @@ html{
 }
 body {
     height: 100%;
+
     background: rgb(183,201,255);
     background: linear-gradient(0deg, rgba(183,201,255,1) 0%, rgba(243,254,254,1) 100%);
     background-repeat: no-repeat;
@@ -105,7 +106,7 @@ body {
 
 
 .content {
-    padding: 0 5%;
+    padding: 5% 20%;
 }
 
 
@@ -136,7 +137,10 @@ body {
     width: 100%;
     height: 300px;
     margin-top: 50px;
-
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 50.00%;
+    justify-content: space-between;
 }
 
 .leaderboard-header{
@@ -189,6 +193,11 @@ body {
     width: 100%;
     height: 300px;
     margin-top: 50px;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between;
+    flex: 1 1 50.00%;
+
 }
 
 .userslist-header {
@@ -212,7 +221,7 @@ body {
 }
 
 .userslist__image {
-    height: 300px;
+    height: 100%;
 }
 
 .userslist__image img{
@@ -229,7 +238,7 @@ body {
 /*course*/
 
 .current-course {
-    height: 300px;
+    height: 100%;
     border-radius: 40px;
     background: rgb(0,31,122);
     background: linear-gradient(0deg, rgba(0,31,122,1) 0%, rgba(0,228,228,1) 100%);
@@ -248,6 +257,11 @@ body {
     margin-top: 20px;
     transition: all 0.5s ease 0s;
     border-radius: 40px;
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 50.00%;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 .current-course-body__title {
@@ -393,7 +407,7 @@ body {
     font-weight: 700;
 }
 
-/*perfomance*/
+/*performance*/
 
 .perfomance-part {
     background: rgb(111,0,0);
@@ -416,8 +430,7 @@ body {
 /*challenges*/
 .challenges-part {
     border-radius: 40px;
-    width: 450px;
-    height: 300px;
+    height: 100%;
     background: rgb(106,0,111);
     background: linear-gradient(0deg, rgba(106,0,111,1) 0%, rgba(228,0,89,1) 100%);
     padding: 20px;
@@ -425,7 +438,7 @@ body {
 
 .challenges-part__title {
     text-align: center;
-    font-size: 5vh;
+    font-size: 3vh;
     color: #560061;
     font-weight: 600;
 }
@@ -443,7 +456,7 @@ body {
 
 .challenge__text {
     text-align: center;
-    font-size: 4vh;
+    font-size: 3vh;
     color: #abf1ff;
 }
 
@@ -460,7 +473,7 @@ body {
     border-radius: 40px;
     text-align: center;
     padding: 10px;
-    font-size: 3vh;
+    font-size: 2vh;
     transition: all 0.8s ease 0s;
 }
 
@@ -483,21 +496,19 @@ body {
 /*achievments*/
 .achievments-part {
     border-radius: 40px;
-    height: 300px;
-    width: 450px;
+    height: 100%;
     background: rgb(28,111,0);
     background: linear-gradient(0deg, rgba(28,111,0,1) 0%, rgba(196,228,0,1) 100%);
-    margin-left: 50px;
+    margin-left: 100px;
 }
 
 /*posts*/
 .posts-part {
     border-radius: 40px;
-    height: 300px;
-    width: 450px;
+    height: 100%;
     background: rgb(0,111,13);
     background: linear-gradient(0deg, rgba(0,111,13,1) 0%, rgba(0,228,225,1) 100%);
-    margin-left: 50px;
+    margin-left: 100px;
 }
 
 ::-webkit-scrollbar {
@@ -589,3 +600,29 @@ body {
     }
 }
 
+@media(max-width: 1600px) {
+    .content{
+        padding: 5% 15%;
+    }
+}
+
+@media(max-width: 1300px) {
+    .content {
+        padding: 5% 10%;
+    }
+}
+
+@media(max-width: 758px) {
+    .current-course{
+    }
+}
+
+@media(max-width: 600px) {
+    .leaderboard{
+        height: 200px;
+    }
+
+    .userslist{
+        height: 200px;
+    }
+}
