Added android development to courses list in Index page

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -91,6 +91,15 @@
 
                     <div class="swiper-slide">
                         <div class="swiper-image">
+                            <img src="~/images/androidCourseSlider.jpg.jpg" />
+                        </div>
+                        <div class="swiper-image__text">
+                            <h3>Android development Course</h3>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-image">
                             <img src="~/images/csharpCourseSlider.jpg" />
                         </div>
                         <div class="swiper-image__text">
