fixed bug with android course image

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
 
                     <div class="swiper-slide">
                         <div class="swiper-image">
-                            <img src="~/images/androidCourseSlider.jpg.jpg" />
+                            <img src="~/images/androidCourseSlider.jpg" />
                         </div>
                         <div class="swiper-image__text">
                             <h3>Android development Course</h3>
