--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -146,28 +146,28 @@
             <form name="registerForm" id="registerForm" method="post">
 
                 <div class="form-group">
-                    <label id="nicknameLabelReg" for="nicknameInputReg">Nickname: </label>
-                    <input id="nicknameInputReg" type="text" class="form-control" placeholder="nickname" name="nicknameInput" />
+                    <label id="nicknameLabelReg">Nickname: </label>
+                    <input id="nicknameInputReg" type="text" class="form-control" placeholder="nickname" />
                 </div>
 
                 <div class="form-group">
-                    <label id="emailLabelReg" for="emailInputReg">Email: </label>
-                    <input id="emailInputReg" type="email" class="form-control" placeholder="email" name="emailInput" />
+                    <label id="emailLabelReg">Email: </label>
+                    <input id="emailInputReg" type="email" class="form-control" placeholder="email" />
                 </div>
 
                 <div class="form-group">
-                    <label id="passwordLabelReg" for="passwordInputReg">Password: </label>
-                    <input id="passwordInputReg" type="password" class="form-control" placeholder="password" name="passwordInput" />
+                    <label id="passwordLabelReg">Password: </label>
+                    <input id="passwordInputReg" type="password" class="form-control" placeholder="password" />
                 </div>
 
                 <div class="form-group">
-                    <label id="confirmPasswordLabel" for="confirmPasswordInput">Confirm password: </label>
-                    <input id="confirmPasswordInput" type="password" class="form-control" placeholder="confirm password" name="passwordInput" />
+                    <label id="passwordConfirmationLabelReg">Confirm password: </label>
+                    <input id="passwordConfirmationInputReg" type="password" class="form-control" placeholder="confirm password" />
                 </div>
 
                 <div class="form-group">
-                    <label id="avatarLabelReg" for="avatarInput">Avatar: </label>
-                    <input id="avatarInputReg" type="file" class="form-control" name="avatarInput"/>
+                    <label id="avatarLabelReg">Avatar: </label>
+                    <input id="avatarInputReg" type="file" class="form-control" />
                 </div>
 
                 <input type="button" id="uploadAvatarBtn" class="btn btn-primary" name="uploadAvatarBtn" value="Set profile image" />
@@ -289,10 +289,11 @@
     </section>
 
     <script type="application/javascript" src="~/js/setAvatarImage.js"></script>
-    <script type="application/javascript" src="~/js/index.js"></script>
     <script type="application/javascript" src="~/js/util/openModal.js"></script>
     <script type="application/javascript" src="~/js/util/slider.js"></script>
     <script type="application/javascript" src="~/js/util/scrollAnimation.js"></script>
+    <script type="application/javascript" src="~/js/util/camelize.js"></script>
+    <script type="application/javascript" src="~/js/index.js"></script>
 </body>
 
 </html>
