--- a/Programmania/Views/Home/Performance.cshtml
+++ b/Programmania/Views/Home/Performance.cshtml
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="~/js/util/createChart.js"></script>
+    <script type="text/javascript" src="~/js/performance.js"></script>
 </body>
 </html>
 
