--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -18,40 +18,41 @@
     <script src="~/js/loading-bar.min.js"></script>
     <script src="~/js/util/animateMain.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" type="text/css" href="~/css/Main.css" />
+
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header__body">
-                <div class="header__burger">
-                    <span></span>
-                </div>
+    <header>
+        <div class="header-container">
+            <div class="container__text">Programmania</div>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <div class="container-menu">
                 <nav class="header__menu">
                     <ul class="header__list">
                         <li>
-                            <a href="Main.html" class="header__link">Main</a>
+                            <a href="Main" class="header__link">Main</a>
                         </li>
 
                         <li>
-                            <a href="Courses.html" class="header__link">Courses</a>
+                            <a href="Courses" class="header__link">Courses</a>
                         </li>
 
                         <li>
-                            <a href="Codes.html" class="header__link">Codes</a>
+                            <a href="News" class="header__link">News</a>
                         </li>
 
                         <li>
-                            <a href="Challenges.html" class="header__link">Challenges</a>
+                            <a href="Challenges" class="header__link">Challenges</a>
                         </li>
 
                         <li>
-                            <a href="Profile.html" class="header__link">Profile</a>
-                        </li>
-
-                        <li>
-                            <a href="News.html" class="header__link">News</a>
+                            <a href="Profile" class="header__link">Profile</a>
                         </li>
                     </ul>
                 </nav>
@@ -61,13 +62,296 @@
 
 
     <main>
-       
+        <div class="header">
+        </div>
+
+        <div class="content">
+
+            <div class="coursesContainer">
+                <div class="currentCourse" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="currentCourse__image ">
+                        <img src="~/images/cSharpLogo.png" />
+                    </div>
+
+                    <div class="currentCourse-content ">
+                        <div class="currentCourse-content__header">
+                            Current Course C#
+                        </div>
+
+                        <div class="currentCourse-content__text">
+                            Lessons Count: 77/100
+                        </div>
+
+                        <div class="currentCourse-content__percent">
+                            <div class="ldBar label-center"
+                                 data-preset="circle"
+                                 data-value="77"
+                                 data-transition-in="1000"
+                                 style="width: 60%; height: 60%;"></div>
+                        </div>
+
+                        <a>
+                            <div class="currentCourse-content__button">
+                                Last lesson: Working with sockets
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+
+                <div class="courses row" data-aos="fade-left" data-aos-duration="1000">
+                    <a class="col-md-6">
+                        <div class="courses__course">
+                            <img src="~/images/phpCourse.png" />
+                        </div>
+                    </a>
+
+                    <a class="col-md-6">
+                        <div class="courses__course">
+                            <img src="~/images/javaCourse.png" />
+                        </div>
+                    </a>
+
+                    <a class="col-md-6">
+                        <div class="courses__course">
+                            <img src="~/images/pythonCourse.png" />
+                        </div>
+                    </a>
+
+                    <a class="col-md-6">
+                        <div class="courses__course">
+                            <img src="~/images/cplusplusCourse.jpg" />
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="levelAndPerformanceContainer">
+                <div class="level" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="level__header">
+                        LEVEL
+                    </div>
+
+                    <div class="level-content">
+                        <h3>77%</h3>
+                        <h5>TO 21 LVL 250xp left</h5>
+                    </div>
+
+                    <div class="level__percent">
+                        <div class="ldBar"
+                             data-preset="line"
+                             data-value="77"
+                             data-transition-in="2000"
+                             style="width: 100%; height: 50%;">
+                        </div>
+                    </div>
+
+                    <div class="level__xp">
+                        255000/255250 XP
+                    </div>
+                </div>
+
+                <div class="performance" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="chartArea">
+                        <div class="chart-container">
+                            <canvas id="performanceChart" style="width: 100%; height: 100%">
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="challenges" data-aos="flip-left" data-aos-duration="1000">
+
+                <a>
+                    <div class="challenges-item challenges-item_create">
+                        <div class="challenges-item__image">
+                            <img src="~/images/pythonCourse.png" />
+                        </div>
+
+                        <div class="challenges-item-content">
+                            <div class="challenges-item-content__userImage">
+                                <img src="~/images/ProfileImg.png" />
+                            </div>
+
+                            <div class="challenges-item-content__username">
+                                Daniel
+                            </div>
+
+                            <div class="challenges-item-content__description">
+                                Propose a challenge in Python language
+                            </div>
+
+                            <div class="challenges-item-content__button" id="createBtn">
+                                Create
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a>
+                    <div class="challenges-item challenges-item_accept">
+                        <div class="challenges-item__image">
+                            <img src="~/images/csharpCourse.jpg" />
+                        </div>
+
+                        <div class="challenges-item-content">
+                            <div class="challenges-item-content__userImage">
+                                <img src="~/images/ProfileImg.png" />
+                            </div>
+
+                            <div class="challenges-item-content__username">
+                                John Johnson
+                            </div>
+
+                            <div class="challenges-item-content__description">
+                                Challenged you on the C# language
+                            </div>
+
+                            <div class="challenges-item-content__button" id="acceptBtn">
+                                Accept
+                            </div>
+
+                            <div class="challenges-item__triangle">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+
+
+                <div class="challenges-info">
+                    <div class="challenges-info__header">
+                        Challenges
+                    </div>
+
+
+                    <div class="challenges-info__percent">
+                        <div class="ldBar label-center"
+                             data-preset="circle"
+                             data-value="77"
+                             data-transition-in="1000"
+                             style="width: 100%; height: 100%">
+                        </div>
+                    </div>
+
+                    <div class="triangle">
+                    </div>
+                </div>
+
+
+                <a>
+                    <div class="challenges-item challenges-item_accept">
+                        <div class="challenges-item__image">
+                            <img src="~/images/RubyCourse.jpg" />
+                        </div>
+
+                        <div class="challenges-item-content">
+                            <div class="challenges-item-content__userImage">
+                                <img src="~/images/ProfileImg.png" />
+                            </div>
+
+                            <div class="challenges-item-content__username">
+                                Maria Lovely
+                            </div>
+
+                            <div class="challenges-item-content__description">
+                                Challenged you on the Ruby language
+                            </div>
+
+                            <div class="challenges-item-content__button" id="acceptBtn">
+                                Accept
+                            </div>
+
+                            <div class="challenges-item__triangle">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a>
+                    <div class="challenges-item challenges-item_create">
+                        <div class="challenges-item__image">
+                            <img src="~/images/cplusplusCourse.jpg" />
+                        </div>
+
+                        <div class="challenges-item-content">
+                            <div class="challenges-item-content__userImage">
+                                <img src="~/images/ProfileImg.png" />
+                            </div>
+
+                            <div class="challenges-item-content__username">
+                                Lili Raider
+                            </div>
+
+                            <div class="challenges-item-content__description">
+                                Propose a challenge in C++ language
+                            </div>
+
+                            <div class="challenges-item-content__button" id="createBtn">
+                                Create
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+
+            <div class="achievmentsAndNewsContainer">
+                <div class="achievment" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="achievment__image lifted">
+                        <img src="~/images/achievment.png" />
+                    </div>
+
+                    <div class="achievment-content">
+                        <div class="achievment-content__header">
+                            Achievment
+                        </div>
+
+                        <div class="achievment-content-main">
+                            <div class="achievment-content-main__header">
+                                Some achievment
+                            </div>
+
+                            <div class="achievment-content-main-flex">
+                                <div class="achievment-content-main-flex__percent">
+                                    <div class="ldBar label-center"
+                                         data-preset="line"
+                                         data-value="60"
+                                         data-transition-in="1500"
+                                         style="width: 100%; height: 50%;">
+                                    </div>
+
+                                    <div class="achievment-content-main-flex__text">
+                                        5 plays left
+                                    </div>
+                                </div>
+
+                                <div class="achievment-content-main-flex__image">
+                                    <img src="~/images/Achievments/brilliantBook.svg"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
     </main>
+
+
     <script type="text/javascript" src="~/js/util/createChartInMain.js"></script>
     <script type="text/javascript" src="~/js/util/burger.js"></script>
     <script type="text/javascript" src="~/js/denyBtnClick.js"></script>
     <script type="text/javascript" src="~/js/util/scrollAnimation.js"></script>
     <script type="text/javascript" src="~/js/denyBtnClick.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 
