--- a/Programmania/wwwroot/css/HamburgerMenu.css
+++ b/Programmania/wwwroot/css/HamburgerMenu.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
     src: url("../Fonts/Font2.ttf");
 }
 
-.container {
+.header-container {
     width: 100%;
     height: 100px;
     display: flex;
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 
     flex-direction: row;
     flex: 1 1 50.00%;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 0;
 }
 
-@media(max-width: 973px) {
+@media(max-width: 1430px) {
     body.lock {
         overflow: hidden;
     }
